--- a/themes/wwcomps/assets/css/_ended-competitions.css
+++ b/themes/wwcomps/assets/css/_ended-competitions.css
@@ -153,3 +153,51 @@
 .products-grd-page-pagi{
 	padding-top: 60px;
 }
+
+
+
+@media (max-width: 1699px){
+	
+}
+
+
+@media (max-width: 1499px) {
+
+}
+
+
+@media(max-width: 1399px){
+
+
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 1199px){
+
+
+
+}
+
+@media(max-width: 991px){
+
+}
+
+@media(max-width: 767px){
+
+}
+
+@media(max-width: 575px){
+
+}
+
+@media(max-width: 479px){
+
+
+}
+
+@media(max-width: 359px){
+
+}
