--- a/themes/wwcomps/assets/css/_current-competition-entry.css
+++ b/themes/wwcomps/assets/css/_current-competition-entry.css
@@ -1,3 +1,6 @@
+.current-competition-entry-sec-ctlr .hh-accordion-des{
+	display:block;
+}
 .current-competition-entry-sec-ctlr .hh-accordion-tab-row{
 	padding-bottom:0px;
 }
@@ -5,10 +8,6 @@
 	padding-left:0px;
 	margin-bottom:0px!important;
 }
-/*.current-competition-entry-sec-ctlr .fl-angle-hdr{
-	border-top-width: 2px;
-	border-bottom-width:2px;
-}*/
 .current-competition-entry-sec-ctlr .fl-angle-sec-hdr > span{
 	background:#35AA5F;
 	display:flex;
@@ -39,15 +38,6 @@
     margin-left: -3px;
     margin-top: 0px;
 }
-/*.current-competition-entry-sec-ctlr .flash-title{
-	padding-top:12px;
-	padding-bottom:12px;
-}*/
-/*.current-competition-entry-sec-ctlr .flash-title:after{
-	background: url(../images/page-title-angle-1.png);
-	width: 13px;
-    margin-top: 0px;
-}*/
 .hh-accordion-active .icon-rotate i{
 	transform:rotate(180deg);
 }
@@ -95,7 +85,7 @@
 	top:9px;
 }
 .hh-accordion-des-cntlr ul{
-	margin-bottom:20px;
+	margin-bottom:30px;
 }
 .hh-accordion-des-cntlr > span{
 	position: absolute;
@@ -103,4 +93,96 @@
 	left:70px;
 	margin-top:-3px;
 }
+
+@media(max-width:1199px){
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr p{
+		font-size:17px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des ul li{
+		font-size:17px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr h5{
+		font-size:22px;
+	}
+}
+
+@media(max-width:991px){
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr{
+		padding-top:70px;
+		padding-bottom:53px;
+		padding-right: 40px;
+	}
+}
+
+@media(max-width:767px){
+	.hh-accordion-des-cntlr > span {
+	    left: 15px;
+	    margin-top: -9px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des {
+	    padding-top: 45px;
+	    padding-bottom: 45px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr {
+	    padding-top: 50px;
+	    padding-bottom: 40px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr p{
+		font-size:15px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des ul li{
+		font-size:15px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr h5{
+		font-size:20px;
+	}
+	.hh-accordion-des-cntlr ul li:after{
+		top:8px;
+		width:5px;
+		height:5px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-title{
+		padding-bottom:0!important;
+	}
+}
+
+@media(max-width:575px){
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr p{
+		font-size:14px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des ul li{
+		font-size:14px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr h5{
+		font-size:19px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr{
+		padding-right:30px;
+	}
+}
+
+@media(max-width:479px){
+	.hh-accordion-des-cntlr ul li{
+		padding-left: 9px;
+	}
+	.hh-accordion-des-cntlr ul li:after{
+		width:4px;
+		height: 4px;
+	}
+}
+
+@media(max-width:359px){
+	.hh-accordion-des-cntlr > span {
+	    left: 0px;
+	    margin-top: -12px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des-cntlr {
+	    padding-right: 20px;
+	    padding-left: 20px;
+	}
+	.current-competition-entry-sec-ctlr .hh-accordion-des ul li{
+		margin-bottom:0px;
+	}
+}
+
 
