--- a/themes/wwcomps/assets/css/_about-us.css
+++ b/themes/wwcomps/assets/css/_about-us.css
@@ -79,6 +79,9 @@
 	.about-pg-bnr-desc h2 span{
 		font-size:28px;
 	}
+	.about-pg-bnr-desc > span{
+	    top: -3px;
+	}
 }
 @media(max-width:479px){
 	.about-pg-bnr-desc h2{
