--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -237,7 +237,7 @@
 	    left: 50%;
 	    width: 68px;
 	    transform: translateX(-50%);
-	    top: 0;
+	    top: -3px;
 	    margin-top: -10px;
 	    margin-left: 0;
 	}
