--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -2,7 +2,7 @@
 	border: none!important;
 }
 .cnt-page-des h2{
-	padding-bottom: 10px;
+	margin-bottom: 25px;
 }
 .cnt-page-des p{
 	line-height: 1;
@@ -123,20 +123,6 @@
     transform: translateY(-50%);
     left: 30px;
 }
-/* .qck-lnk-img img {
-    top: 50%;
-    position: absolute;
-    transform: translateY(-50%);
-    left: 30px;
-} */
-/* .qck-lnk-item img {
-    position: absolute;
-    left: 30px;
-    top: 50%;
-    transform: translateY(-50%);
-    border: 2px solid #fff;
-} */
-
 .qck-lnk-title{
 	font-size: 24px;
 	font-family: 'LeagueSpartan-Semibold';
@@ -181,23 +167,48 @@
 	.qck-lnk-title{
 		font-size: 22px!important;	
 	}
+	.qck-lnk-img{
+		padding-right: 100px;
+	}
+	.qck-lnk-img img{
+		left: 25px;
+		width:50px;
+		height: 55px; 
+	}
+	.qck-lnk-item-des{
+		padding: 24px 45px 20px 10px;
+	}
 	.qck-lnk-item-des address, 
 	.qck-lnk-item-des a{
-		font-size: 22px;
+		font-size: 19px;
 	}
 }
 
 
 @media(max-width: 1399px){
+	.qck-lnk-img{
+		padding-right: 85px;
+	}
+	.qck-lnk-img img{
+		left: 20px;
+		width:45px;
+		height: 50px; 
+	}
+	.qck-lnk-img:after{
+		top: 19%;
+	}
 	.qck-lnk-title{
 		font-size: 21px!important;	
 	}
+	.qck-lnk-item-des{
+		padding: 20px 48px 20px 10px;
+	}
 	.qck-lnk-item-des address a{
-		line-height: 1.2;
+		line-height: 1.4;
 	}
 	.qck-lnk-item-des address, 
 	.qck-lnk-item-des a{
-		font-size: 20px;
+		font-size: 18px;
 	}
 
 }
@@ -225,6 +236,9 @@
 }
 
 @media(max-width: 991px){
+	.input-field-col{
+		padding-bottom: 25px;
+	}
 	.input-field-col input[type="text"],
 	.input-field-col input[type="email"],
 	.input-field-col textarea{
@@ -243,6 +257,9 @@
 	.cnt-page-des{
 		border: 1px solid #7C7C7C!important;
 		padding: 40px 15px!important;
+	}
+	.input-field-col{
+		padding-bottom: 20px;
 	}
 	.input-field-col input[type="text"],
 	.input-field-col input[type="email"],
@@ -305,10 +322,13 @@
 
 @media(max-width: 575px){
 	.cnt-page-des h2{
-		font-size: 26px!important;
+		font-size: 20px!important;
 	}
 	.cnt-form-btn{
 		width: 100%!important;
+	}
+	.input-field-col{
+		padding-bottom: 15px;
 	}
 	.input-field-col input[type="text"],
 	.input-field-col input[type="email"],
