--- a/themes/wwcomps/assets/css/_entry-lists.css
+++ b/themes/wwcomps/assets/css/_entry-lists.css
@@ -163,8 +163,11 @@
 	.entry-list-item{
 		padding: 30px 10px 25px 20px;
 	}
+	.title-bar{
+		padding-bottom: 27px;
+	}
 	.entty-item-title{
-		font-size: 17px!important;
+		line-height: 1.2;
 	}
 }
 
@@ -178,8 +181,8 @@
 	.title-bar{
 	    display: inline-block;
 	    vertical-align: baseline;
-	    padding-bottom: 20px;
-	    min-height: 85px;
+	    padding-bottom: 35px;
+	   /*  min-height: 85px; */
 	}
 	.entty-item-title{
 		font-size: 16px!important;
