--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -248,6 +248,7 @@
 	 }
 	 .page-bnr-desc{
 	    padding-top: 30px;
+	    padding-bottom: 37px!important;
 	}
 	 .page-bnr-desc > strong{
 	 	font-size:14px;
