--- a/themes/wwcomps/assets/css/_contact-us.css
+++ b/themes/wwcomps/assets/css/_contact-us.css
@@ -1,3 +1,8 @@
+.contact-us-sec{
+	padding-top: 80px;
+	padding-bottom: 90px;
+	min-height: 900px;
+}
 .cnt-page-des{
 	border: none!important;
 }
@@ -167,6 +172,10 @@
 	.qck-lnk-title{
 		font-size: 22px!important;	
 	}
+	.qck-lnk-cntrl ul li:nth-child(1) .qck-lnk-img img {
+    	width: 43px;
+    	height: 55px;
+	}
 	.qck-lnk-img{
 		padding-right: 100px;
 	}
@@ -221,6 +230,10 @@
 	.qck-lnk-cntrl ul li{
 		max-width: 50%;
 	}
+	.qck-lnk-item{
+		max-width: 450px;
+		margin: 0 auto;
+	}
 	.qck-lnk-cntrl ul li {
     	margin: auto;
 	}
@@ -244,6 +257,9 @@
 	.input-field-col textarea{
 		font-size: 17px;
 	}
+	.qck-lnk-cntrl ul li:nth-child(1) .qck-lnk-img img{
+		height: 55px;
+	}
 
 }
 @media(max-width: 785px){
@@ -253,7 +269,19 @@
 }
 
 @media(max-width: 767px){
-	
+	.page-banner-section{
+		padding-top: 256px;
+		padding-bottom: 80px;
+	}
+	.qck-lnk-cntrl{
+		padding: 80px 0;
+	}
+	.qck-lnk-cntrl ul{
+		margin: -15px -10px;
+	}
+	.qck-lnk-cntrl ul li{
+		padding: 15px 10px;
+	}
 	.cnt-page-des{
 		border: 1px solid #7C7C7C!important;
 		padding: 40px 15px!important;
@@ -300,16 +328,16 @@
 	.qck-lnk-title{
 		font-size: 19px!important;	
 	}
+	.qck-lnk-cntrl ul li:nth-child(1) .qck-lnk-img img{
+		height: 50px;
+		width: 37px;
+	}
 	.qck-lnk-item-des address, .qck-lnk-item-des a{
 		font-size: 16px;
 	}
 
 }
 @media(max-width: 639px){
-	.qck-lnk-img{
-		padding-right: 90px;
-    	height: 100px;
-	}
 	.qck-lnk-img img{
 		left: 25px;
     	width: 45px;
@@ -339,16 +367,23 @@
 		height: 120px;
 	}
 	.qck-lnk-img{
-		padding-right: 80px;
-		height: 80px;
+		padding-right: 66px;
+		height: 66px;
+	}
+	.qck-lnk-cntrl ul li:nth-child(1) .qck-lnk-img img{
+		width: 21px;
+		height: 28px;
 	}
 	.qck-lnk-img img{
-		left: 20px;
-    	width: 40px;
-    	height: 40px;
+		left: 22px;
+    	width: 21px;
+    	height: 28px;
 	}
 	.qck-lnk-item-des address a{
 		line-height: 1.2;
+	}
+	.qck-lnk-img:after{
+		top: 21%;
 	}
 	
 }
@@ -364,8 +399,8 @@
 		height: 65px;
 	}
 	.qck-lnk-img img{
-		left: 16px;
-    	width: 28px;
+		left: 21px;
+    	width: 21px;
     	height: 28px;
 	}
 	.qck-lnk-item-des address a{
@@ -375,5 +410,21 @@
 }
 
 @media(max-width: 359px){
-
+	.qck-lnk-img {
+    	padding-right: 50px;
+    	height: 60px;
+	}
+	.qck-lnk-img{
+		padding-right: 50px;
+    	height: 60px;
+	}
+	.qck-lnk-img img{
+		left: 13px;
+	}
+	.qck-lnk-item-des{
+		padding: 15px;
+	}
+	.qck-lnk-img:after{
+		top: 27%;
+	}
 }
