--- a/themes/wwcomps/assets/css/_how-it-works.css
+++ b/themes/wwcomps/assets/css/_how-it-works.css
@@ -107,9 +107,16 @@
 		padding-bottom: 30px;
 		font-size:18px;	
 	}
-
+}
+@media(max-width:1199px){
+	.flash-title{
+		padding-right:45px;
+	}
 }
 @media(max-width:991px){
+	.flash-title {
+	    padding-right: 30px;
+	}
 	.page-banner-section {
 	    padding-bottom: 88px;
 	    min-height: 865px;
@@ -143,6 +150,9 @@
 	}
 }
 @media(max-width:767px){
+	.flash-title {
+	  font-size:18px!important;
+	}
 	.page-banner-section{
 		padding-bottom:45px;
 		padding-top: 234px;
@@ -156,7 +166,7 @@
 	}
 	.page-bnr-desc h3, .page-bnr-desc h3.fl-h3{
 		font-size:25px;
-		padding-bottom:17px;
+		margin-bottom:17px;
 	}
 	.page-bnr-desc > strong{
 		font-size:20px;
@@ -196,6 +206,12 @@
 	}
 }
 @media(max-width:575px){
+	.flash-title {
+	  padding-right: 20px;
+	  font-size:16px!important;
+	    padding-top: 12px;
+    	padding-bottom: 12px;
+	}
 	.page-bnr-desc h2, .page-bnr-desc h2.fl-h1{
 		font-size:24px;
 	}
