--- a/themes/wwcomps/assets/css/_current-competition-entry.css
+++ b/themes/wwcomps/assets/css/_current-competition-entry.css
@@ -1,6 +1,11 @@
-.current-competition-entry-sec-ctlr .hh-accordion-des{
+.current-competition-entry-sec-ctlr .hh-accordion-tab-row:first-child .hh-accordion-des{
 	display:block;
 }
+/*.current-competition-entry-sec-ctlr .hh-accordion-tab-row:first-child .icon-rotate i{
+	transform:rotate(180deg);
+	-ms-transform:rotate(180deg);
+	-webkit-transform:rotate(180deg);
+}*/
 .current-competition-entry-sec-ctlr .hh-accordion-tab-row{
 	padding-bottom:0px;
 }
@@ -40,6 +45,8 @@
 }
 .hh-accordion-active .icon-rotate i{
 	transform:rotate(180deg);
+	-ms-transform:rotate(180deg);
+	-webkit-transform:rotate(180deg);
 }
 .current-competition-entry-sec-ctlr .hh-accordion-des{
 	background:#175884;
@@ -87,7 +94,7 @@
 .hh-accordion-des-cntlr ul{
 	margin-bottom:30px;
 }
-.hh-accordion-des-cntlr > span{
+.hh-accordion-des-cntlr span.acordion-arrow{
 	position: absolute;
 	top:0;
 	left:70px;
@@ -115,7 +122,7 @@
 }
 
 @media(max-width:767px){
-	.hh-accordion-des-cntlr > span {
+	.hh-accordion-des-cntlr span.acordion-arrow {
 	    left: 15px;
 	    margin-top: -9px;
 	}
@@ -172,7 +179,7 @@
 }
 
 @media(max-width:359px){
-	.hh-accordion-des-cntlr > span {
+	.hh-accordion-des-cntlr span.acordion-arrow {
 	    left: 0px;
 	    margin-top: -12px;
 	}
