--- a/themes/wwcomps/assets/css/_page.css
+++ b/themes/wwcomps/assets/css/_page.css
@@ -195,11 +195,18 @@
 }
 
 @media(max-width: 991px){
-
+	.slick-slider .slick-dots li{
+		width: 20px!important;
+		height: 20px!important;
+	}
+	
 }
 
 @media(max-width: 767px){
-
+	.slick-slider .slick-dots li{
+		width: 15px!important;
+		height: 15px!important;
+	}
 
 }
 
