--- a/themes/wwcomps/assets/css/_ended-competitions.css
+++ b/themes/wwcomps/assets/css/_ended-competitions.css
@@ -206,15 +206,41 @@
 }
 
 @media(max-width: 991px){
-
+	.pro-fea-img-cntlr {
+	    height: 236px;
+	}
 }
 
 @media(max-width: 767px){
-
+	.product-grds-cntlr ul{
+		margin-left: -10px;
+		margin-right: -10px;
+	}
+	.product-grds-cntlr ul li{
+		width: 50%;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-bottom: 20px;
+	}
 }
 
 @media(max-width: 575px){
-
+	.product-grds-cntlr ul li{
+		width: 100%;
+	}
+	.product-grd-item{
+		max-width: 350px;
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.products-grd-page-con {
+	    padding-top: 45px;
+	    padding-bottom: 80px;
+	}
+	.products-grd-page-pagi {
+	    padding-top: 45px;
+	}
 }
 
 @media(max-width: 479px){
