--- a/themes/wwcomps/assets/css/_ended-competitions.css
+++ b/themes/wwcomps/assets/css/_ended-competitions.css
@@ -248,6 +248,9 @@
 	.product-grd-item-des{
 		text-align: center;
 	}
+	.pro-grd-ftr-bar:before{
+		content: none;
+	}
 }
 
 @media(max-width: 479px){
