--- a/themes/wwcomps/assets/css/_entry-lists.css
+++ b/themes/wwcomps/assets/css/_entry-lists.css
@@ -137,6 +137,9 @@
 }
 
 @media(max-width: 991px){
+	.entry-list-item{
+		background-position: 300px auto;
+	}
 	.entty-item-title{
 		font-size: 17px!important;
 	}
@@ -180,6 +183,7 @@
 		max-width: 450px;
 		width: 100%;
 		margin: 0 auto;
+		background-position: 440px auto;
 		padding: 30px 10px 25px 15px;
 	}
 	.title-bar{
