--- a/themes/wwcomps/assets/css/_forest-projects.css
+++ b/themes/wwcomps/assets/css/_forest-projects.css
@@ -462,6 +462,12 @@
 	.partners-sec-cntlr ul li {
 	    padding: 5px 25px;
 	}
+	.forest-proj-sec .custom_paging li{
+		width: 32px;
+	    height: 32px;
+	    font-size:15px;
+	}
+
 }
 @media(max-width:369px){
 	.pur-proj-dec p{
